--- a/.gitignore
+++ b/.gitignore
@@ -160,4 +160,8 @@ cython_debug/
 .idea/
 
 
-/homework-1/w_1.py
+/homework-1/w_101.py
+/homework-2/w_201.py
+/homework-2/work_text.txt
+/homework-2/w_202.py
+/homework-2/w_203.py
