--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ pytest = "^7.4.3"
 pytest-cov = "^4.1.0"
 google-api-python-client = "^2.111.0"
 
+
+[tool.poetry.group.dev.dependencies]
+isodate = "^0.6.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
