--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,6 @@ cython_debug/
 /homework-2/w_202.py
 /homework-2/w_203.py
 /homework-3/w_301.py
+/homework-4/w_402.py
+/homework-4/w_402.py
+/homework-4/w_401.py
