--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ google-api-python-client = "^2.111.0"
 
 [tool.poetry.group.dev.dependencies]
 isodate = "^0.6.1"
+icecream = "^2.1.3"
 
 [build-system]
 requires = ["poetry-core"]
